# imgur-dl

./: Cargo.toml  README.md  build.sh
data/: album.json  example_album.json  example_album2.json
src/: album.rs  api.rs  main.rs  models.rs  util.rs
src/models/: album.rs
src/subhandlers/: album_handler.rs  config_handler.rs  handler_traits.rs  mod.rs  upload_handler.rs
src/utility/: iter.rs  mime2ext.rs  mod.rs  template.rs  url_builder.rs
