[package]
name = "imgur-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
structopt = "0.3.26"
tokio = { version = "1.27.0", features = ["full", "time"] }
