[package]
name = "imgur-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
env_logger = "0.10.0"
futures = "0.3.28"
http = "0.2.9"
lazy_static = "1.4.0"
log = "0.4.17"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
struct-string-template = "0.1.0"
structopt = "0.3.26"
tokio = { version = "1.27.0", features = ["full", "time"] }
tokio-retry = "0.3.0"
